# selfhost-tg-downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
cookies/: .gitkeep  README.md
data/: cache.db
src/: __main__.py  bot.py  config.py  database.py  healthcheck.py  utils.py
src/downloader/: __init__.py  gallery.py
src/handlers/: __init__.py  inline.py  media.py  start.py
tests/: conftest.py  test_downloader.py  test_gallery.py  test_url_detection.py
